# chmod_calculator

./: .gitignore  LICENSE  README  README.md
chmod_calculator/: CMakeLists.txt
chmod_calculator/chmod_calc/: CMakeLists.txt  main.cpp
chmod_calculator/chmod_calc/data/: CMakeLists.txt  chmodperms.cpp  chmodperms.hpp
chmod_calculator/chmod_calc/gui/: CMakeLists.txt  MainFrame.cpp  MainFrame.hpp
chmod_calculator/chmod_calc/gui/elements/: CMakeLists.txt  chmod_portion.cpp  chmod_portion.hpp
chmod_calculator/chmod_calc/utilities/: CMakeLists.txt  base_convert.hpp  file_loader.cpp  file_loader.hpp  stream_operations.hpp
chmod_calculator/unit_tests/: CMakeLists.txt  main.cpp  misc_tests.cpp  permissions_tests.cpp  runner.cpp
chmod_calculator/unit_tests/test_utilities/: CMakeLists.txt  common_test_util.cpp  common_test_util.hpp
chmod_calculator/wxWidgets-3.2.1/buildOSX/: Makefile  config.status
chmod_calculator/wxWidgets-3.2.1/buildOSX/.deps/: advdll_dummy.o.d  auidll_auibar.o.d  auidll_auibook.o.d  auidll_dockart.o.d  auidll_floatpane.o.d  auidll_framemanager.o.d  auidll_tabart.o.d  auidll_tabmdi.o.d  auidll_xh_aui.o.d  auidll_xh_auitoolb.o.d  basedll_any.o.d  basedll_appbase.o.d  basedll_appunix.o.d  basedll_arcall.o.d  basedll_arcfind.o.d  basedll_archive.o.d  basedll_arrstr.o.d  basedll_base64.o.d  basedll_cfstring.o.d  basedll_clntdata.o.d  basedll_cmdline.o.d  basedll_cocoa_power.o.d  basedll_cocoa_stdpaths.o.d  basedll_cocoa_utils.o.d  basedll_common_secretstore.o.d  basedll_common_uilocale.o.d  basedll_config.o.d  basedll_convauto.o.d  basedll_core_mimetype.o.d  basedll_core_secretstore.o.d  basedll_core_uilocale.o.d  basedll_datetime.o.d  basedll_datetimefmt.o.d  basedll_datstrm.o.d  basedll_dircmn.o.d  basedll_dlunix.o.d  basedll_dynlib.o.d  basedll_dynload.o.d  basedll_encconv.o.d  basedll_epolldispatcher.o.d  (+690 more)
chmod_calculator/wxWidgets-3.2.1/buildOSX/demos/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/demos/bombs/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/demos/forty/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/demos/fractal/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/demos/life/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/demos/poem/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/lib/: libwx_baseu_net-3.2.0.1.0.dylib  libwx_baseu_xml-3.2.0.1.0.dylib  libwx_osx_cocoau_adv-3.2.0.1.0.dylib  libwx_osx_cocoau_aui-3.2.0.1.0.dylib  libwx_osx_cocoau_gl-3.2.0.1.0.dylib  libwx_osx_cocoau_html-3.2.0.1.0.dylib  libwx_osx_cocoau_media-3.2.0.1.0.dylib  libwx_osx_cocoau_propgrid-3.2.0.1.0.dylib  libwx_osx_cocoau_qa-3.2.0.1.0.dylib  libwx_osx_cocoau_ribbon-3.2.0.1.0.dylib  libwx_osx_cocoau_richtext-3.2.0.1.0.dylib  libwx_osx_cocoau_webview-3.2.0.1.0.dylib  libwx_osx_cocoau_xrc-3.2.0.1.0.dylib
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/animate/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/archive/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/artprov/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/aui/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/calendar/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/caret/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/clipboard/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/collpane/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/combo/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/config/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/console/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/dataview/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/debugrpt/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/dialogs/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/display/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/dnd/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/docview/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/dragimag/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/drawing/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/erase/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/event/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/except/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/exec/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/font/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/fswatcher/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/grid/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/help/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/htlbox/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/html/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/image/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/internat/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/ipc/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/joytest/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/keyboard/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/layout/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/listctrl/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/mdi/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/mediaplayer/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/menu/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/minimal/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/notebook/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/opengl/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/samples/popup/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/tests/: Makefile
chmod_calculator/wxWidgets-3.2.1/buildOSX/utils/: Makefile
src/: CMakeLists.txt  main.cpp
src/GUI/: CMakeLists.txt  MainFrame.cpp  MainFrame.hpp  MainWindow.cpp  MainWindow.hpp
(+90 files in other folders)
